--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class=top class="javaSample">
-<img data-src="https://lh3.google.com/u/0/d/1UE5dCx6bsxrZqlQ7_AMAv7CP3YFZziO6=w1365-h953-iv1" id="imageArea" class="loaded" src="https://lh3.google.com/u/0/d/1UE5dCx6bsxrZqlQ7_AMAv7CP3YFZziO6=w1365-h953-iv1" data-was-processed="true"><noscript></noscript>
+<img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" id="imageArea" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" data-was-processed="true"><noscript></noscript>
 <div class=box class="javaSample">
 <img data-src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" id="imageArea_1" class="loaded" src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" data-was-processed="true"><noscript></noscript>
 </div>
