--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </div>
   
     <div class=box class="javaSample">
-<img data-src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" id="imageArea_3" class="loaded" src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" data-was-processed="true"><noscript></noscript>
+<img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" id="imageArea_3" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" data-was-processed="true"><noscript></noscript>
 </div>
   <p><button id="deleteBtn1">画像ランダム表示のボタン</button>
 </div></p>
@@ -34,7 +34,28 @@ imageArea.src = images[imageNo];
 });
   document.querySelector('#deleteBtn1').addEventListener('click', () => {　
 const imageArea = document.getElementById('imageArea_3');
-const images = ['https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1', 'https://lh3.google.com/u/0/d/1VdZvfL9GhhFeXKZbfnQmXhE5lMEvbHWm=w1365-h953-iv1', 'https://lh3.google.com/u/0/d/1-1tKl1SP1rca_wDS4pTgyW6h_uKJfzkL=w1365-h953-iv1'];
+const images = ['https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/Ancient.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/AzureTires.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/BlueStandard.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/ButtonTires.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/CrimsonSlim.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/Cushion.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/CyberSlick.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/GLATires.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/GoldTires.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/HotMonster.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/LeafTires.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/Metal.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/Monster.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/OffRoad.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/RetroOffRoad.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/RollerTires.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/SlickTires.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/SlimTires.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/Sponge.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/Triforce.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/Wood.png?raw=true'];
 const imageNo = Math.floor( Math.random() * images.length)
 imageArea.src = images[imageNo];
 });
