--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </div>
   
   <div class=box class="javaSample">
-<img data-src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" id="imageArea_2" class="loaded" src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" data-was-processed="true"><noscript></noscript>
+<img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/StandardKart.png?raw=true" id="imageArea_2" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/StandardKart.png?raw=true" data-was-processed="true"><noscript></noscript>
 </div>
   
     <div class=box class="javaSample">
@@ -28,7 +28,47 @@ imageArea.src = images[imageNo];
 });
    document.querySelector('#deleteBtn1').addEventListener('click', () => {　
 const imageArea = document.getElementById('imageArea_2');
-const images = ['https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1', 'https://lh3.google.com/u/0/d/1VdZvfL9GhhFeXKZbfnQmXhE5lMEvbHWm=w1365-h953-iv1', 'https://lh3.google.com/u/0/d/1-1tKl1SP1rca_wDS4pTgyW6h_uKJfzkL=w1365-h953-iv1'];
+const images = ['https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/300SLRoadster.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Badwagon.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Bdasher.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/BiddyBuggy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/BlueFalcon.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/BoneRattler.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/CatCruiser.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/CircuitSpecial.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/CityTripper.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Comet.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/FlameRider.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/GLA.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/GoldStandard.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Inkstriker.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/JetBike.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/KoopaClown.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Landship.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Mach8.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/MasterCycle.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/MasterCycleZero.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/MrScooty.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/PWing.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/PipeFrame.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Prancer.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Sneaker.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/SplatBuggy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/SportBike.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/SportsCoupe.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/StandardATV.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/StandardBike.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/StandardKart.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/SteelDriver.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Streetle.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/TanookiBuggy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/TeddyBuggy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/TheDuke.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Trispeeder.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/Varmint.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/W25SilverArrow.png?raw=true'
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/WildWiggler.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/cus%20-%20100px/YoshiBike.png?raw=true' ];
 const imageNo = Math.floor( Math.random() * images.length)
 imageArea.src = images[imageNo];
 });
