--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <div class=top class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" id="imageArea" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" data-was-processed="true"><noscript></noscript>
 <div class=box class="javaSample">
-<img data-src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" id="imageArea_1" class="loaded" src="https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1" data-was-processed="true"><noscript></noscript>
+<img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Mario.png?raw=true" id="imageArea_1" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Mario.png?raw=true" data-was-processed="true"><noscript></noscript>
 </div>
   
   <div class=box class="javaSample">
@@ -22,7 +23,55 @@ imageArea.src = images[imageNo];
 });
   document.querySelector('#deleteBtn1').addEventListener('click', () => {　
 const imageArea = document.getElementById('imageArea_1');
-const images = ['https://lh3.google.com/u/0/d/10FqjSek9ZIQmsYuyTQNOm4QY7-t5Nd7F=w1365-h953-iv1', 'https://lh3.google.com/u/0/d/1VdZvfL9GhhFeXKZbfnQmXhE5lMEvbHWm=w1365-h953-iv1', 'https://lh3.google.com/u/0/d/1-1tKl1SP1rca_wDS4pTgyW6h_uKJfzkL=w1365-h953-iv1'];
+const images =    ['https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/BabyDaisy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/BabyLuigi.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/BabyMario.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/BabyPeach.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/BabyRosalina.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Birdo.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Bowser.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/BowserJr.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/CatPeach.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Daisy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/DiddyKong.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/DonkeyKong.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/DryBones.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/DryBowser.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/FunkyKong.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Iggy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Inkling_Female.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Inkling_Male.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Isabelle.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Kamek.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/KingBoo.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Koopa.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Lakitu.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Larry.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Lemmy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Link.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Ludwig.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Luigi.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Mario.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/MetalMario.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Mii.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Morton.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Pauline.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Peach.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Peachette.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/PeteyPiranha.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/PinkGoldPeach.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Rosalina.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Roy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/ShyGuy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/TanookiMario.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Toad.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Villager_Female.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Villager_Male.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Waluigi.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Wario.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Wendy.png?raw=true', 
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Wiggler.png?raw=true',
+   'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/char/Yoshi.png?raw=true', ];
 const imageNo = Math.floor( Math.random() * images.length)
 imageArea.src = images[imageNo];
 });
