--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class=box class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" id="imageArea_3" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" data-was-processed="true"><noscript></noscript>
 </div>
-  <p><button id="deleteBtn1">画像ランダム表示のボタン</button>
+  <p><button class="button" id="deleteBtn1">ランダムカスタム実行</button>
 </div></p>
 <script>
 document.querySelector('#deleteBtn1').addEventListener('click', () => {　
@@ -159,5 +159,23 @@ div.box {
 }
 img {
   width: 200px;
+}
+  .button {
+    max-width: 250px;
+    padding: 10px 25px;
+    color: #9f000c;
+    font-family: "Noto Sans Japanese";
+    text-decoration: none;
+    color: #333;
+    line-height: 1.8;
+    transition: 0.3s ease-in-out;
+    font-weight: 500;
+    background: #eee;
+    border-radius: 9999px;
+    border-bottom: solid 5px #999;
+}
+.button :hover {
+    border-bottom: solid 2px #999;
+    transform: translateY(3px);
 }
 </style>
