--- a/index.html
+++ b/index.html
@@ -161,9 +161,11 @@ img {
   width: 200px;
 }
   .button {
+    display: flex;
+    margin: 10px 10px 10px 325px;
     max-width: 250px;
     padding: 10px 25px;
-    color: #9f000c;
+    color: #333;
     font-family: "Noto Sans Japanese";
     text-decoration: none;
     color: #333;
