--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class=box class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" id="imageArea_3" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" data-was-processed="true"><noscript></noscript>
 </div>
-  <p><button class="button" id="deleteBtn1">ランダムカスタム実行</button>
+  <p><button class="button" id="deleteBtn1"><font size=3>ランダムカスタム実行</font></button>
 </div></p>
 <script>
 document.querySelector('#deleteBtn1').addEventListener('click', () => {　
@@ -162,16 +162,16 @@ img {
 }
   .button {
     display: flex;
-    margin: 10px 10px 10px 325px;
-    max-width: 250px;
-    padding: 10px 25px;
+    margin: 10px 10px 10px 525px;
+    max-width: 300px;
+    padding: 35px 45px;
     color: #333;
     font-family: "Noto Sans Japanese";
     text-decoration: none;
     color: #333;
-    line-height: 1.8;
+    line-height: 0.8;
     transition: 0.3s ease-in-out;
-    font-weight: 500;
+    font-weight: 50;
     background: #eee;
     border-radius: 9999px;
     border-bottom: solid 5px #999;
