--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<body>
 <div class=top class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" id="imageArea" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" data-was-processed="true"><noscript></noscript>
 <div class=box class="javaSample">
@@ -12,7 +12,7 @@
     <div class=box class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" id="imageArea_3" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/ti/StandardTires.png?raw=true" data-was-processed="true"><noscript></noscript>
 </div>
-  <p><button class="button" id="deleteBtn1"><font size=3>ランダムカスタム実行</font></button>
+  <p><button class="button" id="deleteBtn1"><font size=6 color="white">START</font></button>
 </div></p>
 <script>
 document.querySelector('#deleteBtn1').addEventListener('click', () => {　
@@ -162,22 +162,25 @@ img {
 }
   .button {
     display: flex;
-    margin: 10px 10px 10px 525px;
+    margin: 10px 10px 10px 575px;
     max-width: 300px;
-    padding: 35px 45px;
+    padding: 30px 45px;
     color: #333;
     font-family: "Noto Sans Japanese";
     text-decoration: none;
     color: #333;
-    line-height: 0.8;
+    line-height: 0.04;
     transition: 0.3s ease-in-out;
     font-weight: 50;
-    background: #eee;
+    background: #2792c3;
     border-radius: 9999px;
-    border-bottom: solid 5px #999;
 }
 .button :hover {
-    border-bottom: solid 2px #999;
     transform: translateY(3px);
 }
-</style>
+  body {
+  margin: 0;
+  padding: 0;
+  font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+}
+</style></body>
