--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@ img {
 .button :hover {
     transform: translateY(3px);
 }
-  body {
-  margin: 0;
-  padding: 0;
-  font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  li, div, h1, h2, p{
+  font-family: 'Arial';
 }
 </style></body>
