--- a/index.html
+++ b/index.html
@@ -181,4 +181,10 @@ img {
   li, div, h1, h2, p{
   font-family: 'Arial';
 }
-</style></body>
+</style><style type="text/css">
+<!--
+#QandA-2 {
+	width: 100%;
+	font-family: Arial;
+}
+  </style></body>
