--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>マリオカート8DXランダムカスタム</title>
 <body>
 <div class=top class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" id="imageArea" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" data-was-processed="true"><noscript></noscript>
@@ -14,6 +15,12 @@
 </div>
   <p><button class="button" id="deleteBtn1"><font size=6 color="white">START</font></button>
 </div></p>
+<div class=text><font size=4>※使い方</font></div><div class=text><font size=4>STARTと書かれたボタンを押す</font></div>
+<div class=text><font size=4>そのカスタムをマリオカート8DXで使う</font></div><p></p>
+<div class=text><font size=4>※注意</font></div><div class=text><font size=4>このサイトは非公式のファンサイトです</font></div>
+<div class=text><font size=4>当サイトをYouTubeやXなどのSNSの掲載は可能です</font></div><p></p>
+<div class=text><font size=4>一部性能が違うインクリング(ボーイ,ガール)、むらびと(男性,女性)はどちらも用意されています</font></div>
+<div class=text><font size=4>制作者 <a href="リンク先のURL">食縁水</a></font></div>
 <script>
 document.querySelector('#deleteBtn1').addEventListener('click', () => {　
 const imageArea = document.getElementById('imageArea');
@@ -187,4 +194,5 @@ img {
 	width: 100%;
 	font-family: Arial;
 }
+  div.text{padding-left: 50px;}
   </style></body>
