--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <title>マリオカート8DXランダムカスタム</title>
 <body>
+  <div><img class=title src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/MKK8.png?raw=true" width="880"></div>
 <div class=top class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" id="imageArea" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" data-was-processed="true"><noscript></noscript>
 <div class=box class="javaSample">
@@ -20,7 +21,7 @@
 <div class=text><font size=4>※注意</font></div><div class=text><font size=4>このサイトは非公式のファンサイトです</font></div>
 <div class=text><font size=4>当サイトをYouTubeやXなどのSNSの掲載は可能です</font></div><p></p>
 <div class=text><font size=4>一部性能が違うインクリング(ボーイ,ガール)、むらびと(男性,女性)はどちらも用意されています</font></div>
-<div class=text><font size=4>制作者 <a href="リンク先のURL">食縁水</a></font></div>
+<div class=text><font size=4>制作者 <a href="https://x.com/syokuennsu1">食縁水</a></font></div>
 <script>
 document.querySelector('#deleteBtn1').addEventListener('click', () => {　
 const imageArea = document.getElementById('imageArea');
@@ -166,6 +167,8 @@ div.box {
 }
 img {
   width: 200px;
+}img.title{
+  width: 1000px;
 }
   .button {
     display: flex;
