--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>マリオカート8DXランダムカスタム</title>
 <body>
-  <link rel="icon" href="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/%E3%83%9E.png?raw=true">
+  <link rel="icon" href="https://github.com/hideyan1017/MarioKart_R_cust/raw/refs/heads/main/favicon.ico">
   <div><img class=title src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/MKK8.png?raw=true" width="880"></div>
 <div class=top class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" id="imageArea" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" data-was-processed="true"><noscript></noscript>
@@ -169,7 +169,7 @@ div.box {
 img {
   width: 200px;
 }img.title{
-  width: 960px;
+  width: 964px;
 }
   .button {
     display: flex;
