--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>マリオカート8DXランダムカスタム</title>
 <body>
-  <link rel="icon" href="https://github.com/hideyan1017/MarioKart_R_cust/raw/refs/heads/main/favicon.ico">
+  <link rel="icon" href="https://lh7-rt.googleusercontent.com/slidesz/AGV_vUdxzcfGoWDFB6Fid8z7Rg3aEdEIgXXq9aj0Y92E9J6BzxHQggddoP4fumX7_utVlqHUhZ89rVlvYQ1EFlGCHxyu3wRi4bAaXYCLYx9E0ey_YefhRSDkiahibUYeCw2bW4_bbd0PozYQlehDuXxgNv1B3kijios=nw?key=2rcakDQWogrSmWZ6NifEQA">
   <div><img class=title src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/MKK8.png?raw=true" width="880"></div>
 <div class=top class="javaSample">
 <img data-src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" id="imageArea" class="loaded" src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true" data-was-processed="true"><noscript></noscript>
