--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <title>マリオカート8DXランダムカスタム</title>
+<head>
 <body>
   <meta name="google-site-verification" content="k84t8iSZVIBMTzpY8GBRSaQS86toVkYOErVGmlol6s8" />
   <link rel="icon" href="https://lh7-rt.googleusercontent.com/slidesz/AGV_vUfmId6b5sPJBc5mu8Rj4i_70_myRcCMsGlbIaWdfGVZ-c1yEEEIUVgN6sIx1cTGpC8GPK6rU7Rm-F5gyxRw1dnOYJHu7Iq_d6J1F-0IoISIi59uuiY914EHnt7-mJ069379vaAJ1eNobFfYpcIXu9uqXi59Gdk=nw?key=2rcakDQWogrSmWZ6NifEQA">
@@ -200,4 +201,4 @@ img {
 	font-family: Arial;
 }
   div.text{padding-left: 50px;}
-  </style></body>
+  </style></body></head>
