--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <title>マリオカート8DXランダムカスタム</title>
-<head>
 <body>
-  <meta name="google-site-verification" content="k84t8iSZVIBMTzpY8GBRSaQS86toVkYOErVGmlol6s8" />
   <link rel="icon" href="https://lh7-rt.googleusercontent.com/slidesz/AGV_vUfmId6b5sPJBc5mu8Rj4i_70_myRcCMsGlbIaWdfGVZ-c1yEEEIUVgN6sIx1cTGpC8GPK6rU7Rm-F5gyxRw1dnOYJHu7Iq_d6J1F-0IoISIi59uuiY914EHnt7-mJ069379vaAJ1eNobFfYpcIXu9uqXi59Gdk=nw?key=2rcakDQWogrSmWZ6NifEQA">
   <div><img class=title src="https://github.com/hideyan1017/MarioKart_R_cust/blob/main/MKK8.png?raw=true" width="880"></div>
 <div class=top class="javaSample">
@@ -25,7 +23,7 @@
 <div class=text><font size=4>当サイトをYouTubeやXなどのSNSの掲載は可能です</font></div><p></p>
 <div class=text><font size=4>一部性能が違うインクリング(ボーイ,ガール)、むらびと(男性,女性)はどちらも用意されています</font></div>
 <div class=text><font size=4>制作者 <a href="https://x.com/syokuennsu1">食縁水</a></font></div>
-<script>
+<div><a href="https://mariokart-r-cus.netlify.app/"><img class=menu src="https://github.com/hideyan1017/MarioKartW_R_cust/blob/main/MKK8_menu.png?raw=true"></a><a href="https://mariokartw-r-cus.netlify.app/"><img class=menu src="https://github.com/hideyan1017/MarioKartW_R_cust/blob/main/MKKW_menu.png?raw=true"></a></div><script>
 document.querySelector('#deleteBtn1').addEventListener('click', () => {　
 const imageArea = document.getElementById('imageArea');
 const images = ['https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/BowserKite.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/CloudGlider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/FlowerGlider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/GoldGlider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/HylianKite.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/MKTVParafoil.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/PaperGlider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/PaperGlider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/Parachute.png?raw=true','https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/Parafoil.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/Paraglider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/PlaneGlider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/SuperGlider.png?raw=true', 'https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/WaddleWing.png?raw=true','https://github.com/hideyan1017/MarioKart_R_cust/blob/main/gl%20-%20100px/WarioWing.png?raw=true'];
@@ -172,6 +170,9 @@ img {
   width: 200px;
 }img.title{
   width: 964px;
+}img.menu{
+  width: 450px;
+  padding-left: 20px;
 }
   .button {
     display: flex;
@@ -201,4 +202,4 @@ img {
 	font-family: Arial;
 }
   div.text{padding-left: 50px;}
-  </style></body></head>
+  </style></body>
