--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class=text><font size=4>そのカスタムをマリオカート8DXで使う</font></div><p></p>
 <div class=text><font size=4>※注意</font></div><div class=text><font size=4>このサイトは非公式のファンサイトです</font></div>
 <div class=text><font size=4>当サイトをYouTubeやXなどのSNSの掲載は可能です</font></div><p></p>
-<div class=text><font size=4>一部性能が違うインクリング(ボーイ,ガール)、むらびと(男性,女性)はどちらも用意されています</font></div>
+<div class=text><font size=4>一部性能が違うインクリング(ボーイ,ガール)、むらびと(男性,女性)はどちらも用意されています</font></div><p></p>
 <div class=text><font size=4>制作者 <a href="https://x.com/syokuennsu1">食縁水</a></font></div>
 <div><a href="https://mariokart-r-cus.netlify.app/"><img class=menu src="https://github.com/hideyan1017/MarioKartW_R_cust/blob/main/MKK8_menu.png?raw=true"></a><a href="https://mariokartw-r-cus.netlify.app/"><img class=menu src="https://github.com/hideyan1017/MarioKartW_R_cust/blob/main/MKKW_menu.png?raw=true"></a></div><script>
 document.querySelector('#deleteBtn1').addEventListener('click', () => {　
